Finished basic ticket buy operation
